Add back charts

--- a/samples/PivotSharp.WebCore/Pages/QueryBuilder/View.cshtml
+++ b/samples/PivotSharp.WebCore/Pages/QueryBuilder/View.cshtml
@@ -3,10 +3,10 @@
 @{
 }
 
-@* <div class="row" style="margin-top: 20px;">
-	<partial name="_Chart" model="Model.PivotTableViewModel" />
+<div class="row" style="margin-top: 20px;">
+	<partial name="_Chart" model="Model.PivotTableViewModel.PivotTable" />
 </div>
- *@
+
 <div class="row" style="margin-top: 20px;">
 	<div class="col-lg-12 col-md-12 col-sm-12">
 
