--- a/samples/PivotSharp.WebCore/Pages/DrillDown.cshtml
+++ b/samples/PivotSharp.WebCore/Pages/DrillDown.cshtml
@@ -1,10 +1,10 @@
-﻿@page
+﻿@page "{id:int}"
 @using System.Data
 @model PivotSharp.WebCore.Pages.DrillDownModel
 @{
 }
 
-<table class="table">
+<table class="table table-striped table-bordered">
 	<thead>
 		<tr>
 			@foreach (var col in Model.Table.Columns.Cast<DataColumn>()) {
