--- a/samples/PivotSharp.WebCore/Pages/QueryBuilder/View.cshtml
+++ b/samples/PivotSharp.WebCore/Pages/QueryBuilder/View.cshtml
@@ -8,17 +8,16 @@
 </div>
 
 <div class="row" style="margin-top: 20px;">
-	<div class="col-lg-12 col-md-12 col-sm-12">
-
-		<div class="panel panel-primary">
-			<div class="panel-heading">
+	<div class="col-12">
+		<div class="card bg-secondary mb-3">
+			<h5 class="card-header">
 				@Model.PivotTableViewModel.Config.Aggregators[0].ColumnName
 				pivoted by
 				@string.Join(",", Model.PivotTableViewModel.Config.Rows)
 				and
 				@string.Join(",", Model.PivotTableViewModel.Config.Cols)
-			</div>
-			<div class="panel-body">
+			</h5>
+			<div class="card-body">
 				<partial name="_PivotTable" model="Model.PivotTableViewModel.PivotTable" />
 			</div>
 		</div>
