--- a/samples/PivotSharp.WebCore/Pages/QueryBuilder/Add.cshtml
+++ b/samples/PivotSharp.WebCore/Pages/QueryBuilder/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "{handler?}"
 @model PivotSharp.WebCore.Pages.QueryBuilder.AddModel
 @{
 }
@@ -25,10 +25,6 @@
         margin-left: 10px;
         margin-right: 10px;
     }
-
-    .aggregators input[type=text] {
-        margin-top: -12px !important; /* Some layout bug when using typeahead */
-    }
 </style>
 
 
@@ -39,38 +35,41 @@
             <div class="panel-heading">
                 <h3 class="panel-title">Field List</h3>
             </div>
-            <div class="panel-body" style="max-height: 600px; overflow-y: scroll;">
+            <div class="panel-body" style="max-height: 400px; overflow-y: scroll;">
                 <div style="padding-left: 0;" id="fieldList" class="source field-list">
                     @foreach (var column in Model.PivotConfig.Columns.OrderBy(s => s.Name)) {
                         <div class="list-group-item form-inline config-item">
                             <!-- Grab Handle -->
-                            <span class="glyphicon glyphicon-move" aria-hidden="true"></span>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-grip-vertical" viewBox="0 0 16 16">
+                                <path d="M7 2a1 1 0 1 1-2 0 1 1 0 0 1 2 0m3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0M7 5a1 1 0 1 1-2 0 1 1 0 0 1 2 0m3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0M7 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0m3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0m-3 3a1 1 0 1 1-2 0 1 1 0 0 1 2 0m3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0m-3 3a1 1 0 1 1-2 0 1 1 0 0 1 2 0m3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0" />
+                            </svg>
 
-                            <!-- Aggregation -->
-                            <select class="aggregator-select form-control">
+                            <!-- Aggregation Type -->
+                            <select class="form-select mt-10 px-3 aggregator-select form-control">
                                 @foreach (var aggregator in Model.PivotConfig.Aggregators) {
                                     <option value="@aggregator">@aggregator</option>
                                 }
                             </select>
 
-                            <span class="column-name">@column.Name</span> <span class="column-type">(@column.DataType)</span>
+                            <span class="column-name">@column.Name</span>
+                            <span class="column-type"><i>@column.DataType</i></span>
 
                             <!-- Filter Operator -->
-                            <select class="operator-select filter-input form-control">
+                            <select class="form-select mt-10 px-3 operator-select filter-input form-control">
                                 @foreach (var filter in Model.PivotConfig.FilterOperators) {
                                     <option value="@filter.Op">@filter.Op</option>
                                 }
                             </select>
 
                             <!-- Value -->
-                            <input type="@column.HtmlInputType" class="parameter filter-input form-control" data-field-name="@column.Name" placeholder="@column.Name" />
+                            <input type="@column.HtmlInputType" class="parameter filter-input form-control"
+                                   data-field-name="@column.Name" placeholder="@column.Name" />
 
                         </div>
                     }
                 </div>
             </div>
         </div>
-
     </div>
 
     <div class="col-md-8">
@@ -115,159 +114,45 @@
                     </tbody>
                 </table>
 
-                <a href="#" class="btn btn-raised btn-primary pull-right generate">Generate</a>
+                <a href="#" id="generate" class="btn btn-raised btn-primary pull-right generate">Generate</a>
             </div>
         </div>
-
     </div>
 
 </div>
 
-
-<script type="text/javascript">
-
-    $(document).ready(function () {
-
-        var sortables = {};
-
-        $('.field-list').each(function (i, obj) {
-            var id = obj.id;
-            sortables[id] = Sortable.create(obj, {
-                handle: '.glyphicon-move',
-                group: 'fields',
-                filter: '.active',
-                animation: 150
-            });
-        });
-
-
-        sortables['filterList'].options.onAdd = function (evt) {
-            // May want to move the typeahead code here to limit db calls.
-            var itemEl = evt.item; // dragged HTMLElement
-            //$(itemEl).find('.parameter:text').each(function (i, obj) {
+@section Scripts {
+    <script type="text/javascript">
+        let options = {
+            group: 'shared',
+            animation: 150
         };
+        Sortable.create(fieldList, options);
+        Sortable.create(filterList, options);
+        Sortable.create(colList, options);
+        Sortable.create(rowList, options);
+        Sortable.create(aggregatorList, options);
 
-        // Clone from the field list, so we can, eg, use a field for multiple aggregators
-        sortables['fieldList'].options.group.pull = 'clone';
-
-        // Because we're cloning, if we drag an item back to the field list, it'll duplicate.
-        sortables['fieldList'].options.onAdd = function (evt) {
-            var itemEl = evt.item; // dragged HTMLElement
-            itemEl.remove(); // don't add
-        };
-
-        $('.field-list.source').find('.parameter:text').each(function (i, obj) {
-
-            var fieldName = $(this).data("field-name");
-
-            var items = new Bloodhound({
-                datumTokenizer: Bloodhound.tokenizers.whitespace,
-                queryTokenizer: Bloodhound.tokenizers.whitespace,
-                // url points to a json file that contains an array of country names, see
-                // https://github.com/twitter/typeahead.js/blob/gh-pages/data/countries.json
-                prefetch: 'GetColumnValues?columnName=' + fieldName
-            });
-
-            // Take top 5 to show as defaults when nothing types.
-            function withDefaults(q, sync) {
-                if (q === '') {
-                    sync(items.all().slice(0, 5));
-                } else {
-                    items.search(q, sync);
-                }
-            }
-
-            $(obj).typeahead({
-                minLength: 0,
-                highlight: true
-            }, {
-                name: fieldName,
-                source: withDefaults
-            });
-        });
-
-
-        $('.generate').on('click', function () {
-
+        document.getElementById('generate').addEventListener('click', function (e) {
             var config = {
-                rows: $('#rowList .column-name').map(function () { return $(this).html(); }).get(),
-                cols: $('#colList .column-name').map(function () { return $(this).html(); }).get(),
-                filters: $('#filterList .config-item').map(function () {
-                    var $this = $(this);
-                    return {
-                        columnName: $this.find('.column-name').html(),
-                        op: $this.find('.operator-select').val(),
+                rows: Array.from(document.querySelectorAll('#rowList .column-name'))
+                  .map((x) => x.innerHTML),
+                cols: Array.from(document.querySelectorAll('#colList .column-name'))
+                  .map((x) => x.innerHTML),
+                filters: Array.from(document.querySelectorAll('#filterList .config-item'))
+                    .map(x => ({
+                        columnName: x.querySelector('.column-name').innerHTML,
+                        op: x.querySelector('.operator-select').value,
                         // typeahead doesn't actually store the value in the underlying field
-                        parameterValue: $this.find('.parameter.tt-input').val() || $this.find('.parameter').val()
-                    };
-                }).get(),
-                aggregators: $('#aggregatorList .config-item').map(function () {
-                    var $this = $(this);
-                    return {
-                        functionName: $this.find('.aggregator-select').val(),
-                        columnName: $this.find('.column-name').html()
-                    };
-                }).get()
-            };
-
-            console.log(config);
-
-            // If we want to load the table into the page, we can post back the config as json using $.ajax(...).
-            // Really what we want to do is create a bookmarkable url.
-            // To do that, we can either:
-            // - Post to the server, and use PRG. Doing a $.post of JSON isn't natively supported, but the post function
-            // below will work. We'd then need so serialise the URL on the server.
-            // - Generate a usable URL and set the window location to that on the browser. The serialize function will do that.
-
-            var preferGet = true;
-            if (preferGet) {
-                window.location = 'ViewByConfig/?' + serialize(config);
-            } else {
-                post('Generate', { config: JSON.stringify(config) });
+                        parameterValue: x.querySelector('.parameter').value
+                    })),
+                aggregators: Array.from(document.querySelectorAll('#aggregatorList .config-item'))
+                    .map(x => ({
+                        functionName: x.querySelector('.aggregator-select').value,
+                        columnName: x.querySelector('.column-name').innerHTML
+                    }))
             }
+            // alert(JSON.stringify(config))
         });
-
-    });
-
-    // http://stackoverflow.com/a/1714899/424788
-    serialize = function (obj, prefix) {
-        var str = [];
-        for (var p in obj) {
-            if (obj.hasOwnProperty(p)) {
-                var k = prefix ? prefix + "[" + p + "]" : p, v = obj[p];
-                str.push(typeof v == "object" ?
-                    serialize(v, k) :
-                    k + "=" + v);
-                //encodeURIComponent(k) + "=" + encodeURIComponent(v));
-            }
-        }
-        return str.join("&");
-    }
-
-
-    // Post json. Weirdly, it's really hard to post json back other than as an ajax request.
-    // http://stackoverflow.com/questions/133925/javascript-post-request-like-a-form-submit
-    function post(path, params, method) {
-        method = method || "post"; // Set method to post by default if not specified.
-
-        // The rest of this code assumes you are not using a library.
-        // It can be made less wordy if you use one.
-        var form = document.createElement("form");
-        form.setAttribute("method", method);
-        form.setAttribute("action", path);
-
-        for (var key in params) {
-            if (params.hasOwnProperty(key)) {
-                var hiddenField = document.createElement("input");
-                hiddenField.setAttribute("type", "hidden");
-                hiddenField.setAttribute("name", key);
-                hiddenField.setAttribute("value", params[key]);
-
-                form.appendChild(hiddenField);
-            }
-        }
-
-        document.body.appendChild(form);
-        form.submit();
-    }
-</script>
+    </script>
+}
