--- a/samples/PivotSharp.WebCore/Pages/Shared/_Layout.cshtml
+++ b/samples/PivotSharp.WebCore/Pages/Shared/_Layout.cshtml
@@ -6,37 +6,12 @@
     <title>@ViewData["Title"] - PivotSharp.WebCore</title>
 
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-
-    <!-- Bootstrap -->
-    @*     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-    crossorigin="anonymous" />
-    *@
 
     <link href="~/lib/bootstrap.min.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
-
-    <script src="~/js/site.js" asp-append-version="true"></script>
-
-    <!-- Chartist plus legend plugin -->
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
-    <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
-    <script src="https://cdn.rawgit.com/CodeYellowBV/chartist-plugin-legend/master/chartist-plugin-legend.js"></script>
-
-    <!-- Sortable, for list drag/drop: https://github.com/RubaXa/Sortable -->
-    <script src="//cdnjs.cloudflare.com/ajax/libs/Sortable/1.4.2/Sortable.min.js"></script>
-
-    <!-- typeahead and bloodhound: http://twitter.github.io/typeahead.js/, https://github.com/twitter/typeahead.js -->
-    <link rel="stylesheet" href="~/Content/typeahead.css" />
-    <script src="https://rawgit.com/twitter/typeahead.js/master/dist/typeahead.bundle.js"></script>
+    <link href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css" rel="stylesheet">
 
     <!-- Tooltip: http://qtip2.com/ -->
-    <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/qtip2/3.0.3/jquery.qtip.min.css" />
-    <script src="http://cdn.jsdelivr.net/qtip2/3.0.3/jquery.qtip.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/qtip2/3.0.3/jquery.qtip.min.css" />
     @* http://qtip2.com/ *@
 
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
@@ -63,6 +38,20 @@
             &copy; 2024 - PivotSharp
         </div>
     </footer>
+
+
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+            integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
+    <script src="https://cdn.rawgit.com/CodeYellowBV/chartist-plugin-legend/master/chartist-plugin-legend.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.4.2/Sortable.min.js"></script>
+    <script src="https://rawgit.com/twitter/typeahead.js/master/dist/typeahead.bundle.js"></script>
+    <script src="https://cdn.jsdelivr.net/qtip2/3.0.3/jquery.qtip.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
