Modernise test code

--- a/samples/PivotSharp.WebCore/Pages/Shared/_PivotTable.cshtml
+++ b/samples/PivotSharp.WebCore/Pages/Shared/_PivotTable.cshtml
@@ -1,5 +1,4 @@
-﻿@using PivotSharp.Extensions
-@model PivotSharp.PivotTable
+﻿@model PivotSharp.PivotTable
 
 <style scoped>
 	/* Be good to have a way to only hover where non-empty. Css can't detect empty content. May need an attribute '*/
