--- a/samples/PivotSharp.WebCore/Pages/QueryBuilder/View.cshtml
+++ b/samples/PivotSharp.WebCore/Pages/QueryBuilder/View.cshtml
@@ -3,31 +3,36 @@
 @{
 }
 
-<div class="row" style="margin-top: 20px;">
+@* <div class="row" style="margin-top: 20px;">
 	<partial name="_Chart" model="Model.PivotTableViewModel.PivotTable" />
-</div>
+</div> *@
 
 <div class="row" style="margin-top: 20px;">
-	<div class="col-12">
-		<div class="card bg-secondary mb-3">
-			<h5 class="card-header">
-				@Model.PivotTableViewModel.Config.Aggregators[0].ColumnName
-				pivoted by
-				@string.Join(",", Model.PivotTableViewModel.Config.Rows)
-				and
-				@string.Join(",", Model.PivotTableViewModel.Config.Cols)
-			</h5>
-			<div class="card-body">
-				<partial name="_PivotTable" model="Model.PivotTableViewModel.PivotTable" />
-			</div>
-		</div>
-	</div>
+    <div class="col-12">
+        <div class="card bg-secondary mb-3">
+            <h5 class="card-header">
+                @Model.PivotTableViewModel.Config.Aggregators[0].ColumnName
+                pivoted by
+                @string.Join(",", Model.PivotTableViewModel.Config.Rows)
+                and
+                @string.Join(",", Model.PivotTableViewModel.Config.Cols)
+            </h5>
+            <div class="card-body">
+                <partial name="_PivotTable" model="Model.PivotTableViewModel.PivotTable" />
+            </div>
+        </div>
+    </div>
 </div>
+
+@section Scripts{
 <script type="text/javascript">
-	$(document).ready(function () {
-		$(".data-cell").on('click', function () {
-			window.open('/QueryBuilder' +
-				'/DrillDown/' + @Model.PivotTableViewModel.Id + '?rowKeys=' + $(this).data('row-key') + '&colKeys=' + $(this).data('col-key'), '_blank');
-		});
-	});
+    const reportId = @Model.PivotTableViewModel.Id;
+    document.addEventListener('DOMContentLoaded', () => {
+        document.querySelectorAll('.data-cell').forEach(cell => {
+            cell.addEventListener('click', (e) => {
+                window.open(`/QueryBuilder/DrillDown/${reportId}?rowKeys=${cell.dataset.rowKey}&colKeys=${cell.dataset.colKey}`, '_blank');
+            });
+        });
+    });
 </script>
+}
