Use the PivotDbConnector to perform drill-down

--- a/samples/PivotSharp.WebCore/Pages/QueryBuilder/Edit.cshtml
+++ b/samples/PivotSharp.WebCore/Pages/QueryBuilder/Edit.cshtml
@@ -136,6 +136,7 @@
                 Id: Number(document.getElementById('reportId').value),
                 Name: document.getElementById('reportName').value,
                 PivotConfig: {
+                   TableName: 'World_Data',
                     Rows: Array.from(document.querySelectorAll('#rowList .column-name'))
                         .map((x) => x.innerHTML),
                     Cols: Array.from(document.querySelectorAll('#colList .column-name'))
