--- a/samples/PivotSharp.WebCore/Pages/_ViewImports.cshtml
+++ b/samples/PivotSharp.WebCore/Pages/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using PivotSharp.WebCore
 @namespace PivotSharp.WebCore.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper PivotSharp.TagHelpers.*, PivotSharp
