Split out canned reports into the Data page

--- a/samples/PivotSharp.WebCore/Pages/Data/Index.cshtml
+++ b/samples/PivotSharp.WebCore/Pages/Data/Index.cshtml
@@ -13,7 +13,7 @@
                 <div class="card-header">@kvp.Key</div>
                 <div class="card-body">
                     <partial name="_PivotConfig" model="new PivotConfigViewModel { Id = kvp.Key, Config = kvp.Value }" />
-                    <a class="btn btn-raised btn-info pull-right" style="margin-top:0; margin-bottom: 0;" href=@($"/QueryBuilder/View?id={kvp.Key}")>View</a>
+                    <a class="btn btn-raised btn-info pull-right" style="margin-top:0; margin-bottom: 0;" href=@($"/Data/View?id={kvp.Key}")>View</a>
                 </div>
             </div>
         </div>
