--- a/samples/PivotSharp.WebCore/Pages/QueryBuilder/Edit.cshtml
+++ b/samples/PivotSharp.WebCore/Pages/QueryBuilder/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{id:int?}"
-@model PivotSharp.WebCore.Pages.QueryBuilder.EditModel
+@model EditModel
 @{
 }
 @inject Microsoft.AspNetCore.Antiforgery.IAntiforgery Xsrf
