--- a/samples/PivotSharp.WebCore/Pages/QueryBuilder/View.cshtml
+++ b/samples/PivotSharp.WebCore/Pages/QueryBuilder/View.cshtml
@@ -1,11 +1,7 @@
-﻿@page
+﻿@page "{id:int}"
 @model ViewModel
 @{
 }
-
-@* <div class="row" style="margin-top: 20px;">
-	<partial name="_Chart" model="Model.PivotTableViewModel.PivotTable" />
-</div> *@
 
 <div class="row" style="margin-top: 20px;">
     <div class="col-12">
