Remove dependency on Newtonsoft

--- a/samples/PivotSharp.WebCore/Pages/QueryBuilder/Index.cshtml
+++ b/samples/PivotSharp.WebCore/Pages/QueryBuilder/Index.cshtml
@@ -15,7 +15,7 @@
                 <div class="card-header">@report.Id @report.Name</div>
                 <div class="card-body">
                     <partial name="_PivotConfig" model="new PivotConfigViewModel { Id = report.Id, Config = report.PivotConfig }" />
-                    <a class="btn btn-raised btn-info pull-right" style="margin-top:0; margin-bottom: 0;" href=@($"/QueryBuilder/View?id={report.Id}")>View</a>
+                    <a class="btn btn-raised btn-info pull-right" style="margin-top:0; margin-bottom: 0;" href=@($"/QueryBuilder/View/{report.Id}")>View</a>
                 </div>
             </div>
         </div>
