--- a/samples/PivotSharp.WebCore/Pages/Shared/_BarChart.cshtml
+++ b/samples/PivotSharp.WebCore/Pages/Shared/_BarChart.cshtml
@@ -1,4 +1,4 @@
-﻿@using Newtonsoft.Json
+﻿@using System.Text.Json;
 @model PivotSharp.WebCore.Models.BarChartViewModel
 
 @* aspect ratios listed at http://gionkunz.github.io/chartist-js/getting-started.html#creating-a-chart-using-aspect-ratios *@
@@ -6,9 +6,9 @@
 
 <script type="text/javascript">
 
-	var labels = @(Html.Raw(JsonConvert.SerializeObject(Model.Labels)));
-	var legends = @(Html.Raw(JsonConvert.SerializeObject(Model.Legends)));
-	var series = @(Html.Raw(JsonConvert.SerializeObject(Model.Series)));
+	var labels = @(Html.Raw(JsonSerializer.Serialize(Model.Labels)));
+	var legends = @(Html.Raw(JsonSerializer.Serialize(Model.Legends)));
+	var series = @(Html.Raw(JsonSerializer.Serialize(Model.Series)));
 
 
 	var data = {
